# fraudparse

./: CHANGELOG.md  arithparse.cabal
app/: AST.hs  Main.hs  Parse.hs  RacketVal.hs  SExpr.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
