cabal-version:      2.4
name:               arithparse
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             echoumcp1
maintainer:         101858583+echoumcp1@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable arithparse
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:      SExpr, RacketVal, AST, Parse

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0, s-cargot, mtl, parsec, text, process
    hs-source-dirs:   app
    default-language: Haskell2010
